# VisualT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VisualTConfig.cmake  concept001.tif  readme.txt  readthedocs.yml  requirements.txt  visualt.c  visualt.h
.github/workflows/: ci.yaml  master.yaml  prerelease.yml  push-master.yml  release.yml
VisualtPack v1/Examples/example02/: main.c
VisualtPack v1/Examples/example02/text/: 1.txt
VisualtPack v1/VisualT/32/: editor32
cmake/: FindSphinx.cmake  utils.cmake
dependencies/: CMakeLists.txt
doc/: CMakeLists.txt  api-reference.md  api.rst  basic-concepts.md  basic-concepts.rst  build.rst  cat.txt  conf.py.in  examples.rst  faq.rst  importers.rst  index.md  index.rst  packages.txt  quick-start.md  readthedocs.py
doc/api/: functions.md  functions.rst  types.md  types.rst
doc/images/: VTCat.ai
doc/importers/: import-xp.rst
doc/quick-start/: consume.md
doc/readthedocs/: ci.cmake  conf.py  copy.cmake  requirements.txt
doc/static/: visualt.css
edlib/: visualt.c
edlib/compiler/: c  c.c
edlib/text/: p.txt
examples/: CMakeLists.txt  readme.txt
examples/01/: CMakeLists.txt  example01.c  main.c
examples/01/res/: cat.txt
examples/02/: CMakeLists.txt  example02.c  main.c
examples/Examples/example01/: main.c
examples/Examples/example04/: main.c
examples/Examples/example04/text/: 1.txt
examples/VisualT/: visualt.h
examples/VisualT/64/: editor64
examples/car/: CMakeLists.txt  main.c
examples/car/assets/: bck.txt  car.txt
examples/cmake/: context-specific.cmake  installed.cmake.in  pjutils.cmake
examples/demo/: CMakeLists.txt  main.c
examples/example03/text/: 1.txt  2.txt
examples/getch/: CMakeLists.txt  getch.h
examples/pen-demo/: CMakeLists.txt  pen-demo.c
examples/utilities/: CMakeLists.txt  msvcUtils.c  posixUtils.c
examples/utilities/include/: utilities.h
examples/waves/: CMakeLists.txt  main.c
include/visualt/: import-xp.h  version.h  version.h.in  visualt.h  visualtUnprefixed.h
legacy/: build.c  editor.c
res/: CMakeLists.txt  tests.c
sources/examples/example01/text/: cat.txt
sources/examples/example03/: main.c
sources/visualt/text/: cat.txt  vh.txt
src/: CMakeLists.txt  buildDate.h.in  version.h.in  visualt-internals.h  visualt.c
src/import-xp/: CMakeLists.txt  importXp.c  loadXp.c  translateXp.c
src/visualt/: CMakeLists.txt  visualt.c
tests/: CMakeLists.txt  tests.c
tests/assets/: VCat.xp  bird.xp  object-sprite.xp  utf8.txt
visualt/: editor.c
